--- a/src/assets/styles/sass/components/_form.scss
+++ b/src/assets/styles/sass/components/_form.scss
@@ -64,11 +64,13 @@
 }
 
 select {
-    width: 100%;
-    padding: 3rem;
-    border: none;
-    border-radius: 50%;
-    background-color: #f1f1f1;
+    @include respond(phone) {
+        border: 1px solid $color-black;
+        border-radius: 5px;
+        color: $color-black;
+        padding: 1rem;
+        -webkit-appearance: none;
+    }
 }
 
 meter {
